# agentic-rag

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.mac.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: agents.yaml  settings.yaml  tasks.yaml
config/prompts/: researcher_backstory.j2  writer_backstory.j2
data/sample/: Data+Sharing+Policy.md  Elaboration+and+Developing+Privacy+Policy+Guideline.md  General+Rules+for+Secondary+Use+of+Data.md  Guide+to+the+saudi+PDP+law+HANDBOOK.md  Guide+to+the+saudi+PDP+law+for+controllersprocessors.md  Guidelines+for+Binding+Common+Rules+(BCR)+For+Personal+Data+Transfer.md  Minimum+Personal+Data+Determination+Guideline.md  Personal+Data+Destruction,+Anonymizatio+and+Encryption+Guideline.md  Personal+Data+Disclosure+Cases+Guideline.md  Personal+Data+English.md  Personal+Data+Processing+Activities+Records+Guideline.md  Regulation+on+Personal+Data+Transfer+Outside+the+Kingdom.md  Risk+Assessment+Guideline+for+Transferring+Personal+Data+Outside+the+Kingdom.md  Rules+for+Appointing+Personal+Data+Protection+Officer.md  Standard+Contractual+Clauses+For+Personal+Data+Transfer.md  The+Rules+Governing+the+National+Register+of+Controllers+Within+the+Kingdom.md  The+impelementing+regulation+of+the+personal+data+protection+law.md
docker/: backend.Dockerfile  indexer.Dockerfile  ollama-init.sh
docs/: PLAN.md
migrations/: 001_init_extensions.sql  002_create_indexes.sql  002_create_tables.sql  003_create_indexes.sql  004_add_index_version_and_semantic_cache.sql
scripts/: pull_models.sh  reset_db.sh
src/agentic_rag/: __init__.py
src/agentic_rag/backend/: main.py
src/agentic_rag/backend/api/v1/: __init__.py  chat.py  chat_service.py  health.py  streaming.py
src/agentic_rag/backend/crew/: __init__.py  agents.py  runner.py  tools.py
src/agentic_rag/backend/openwebui/: __init__.py  adapters.py
src/agentic_rag/backend/rag/: __init__.py  index_guard.py  query_embedding.py  reranker.py  retriever.py  semantic_cache.py
src/agentic_rag/core/: __init__.py  citations.py  config.py  constants.py  exceptions.py  health.py  llm_factory.py  memory.py  migrator.py  models.py  prompts.py  schemas.py  scope_gate.py
src/agentic_rag/evaluator/: __init__.py  cli.py  generation.py  metrics.py
src/agentic_rag/indexer/: __init__.py  chunking.py  cli.py  parser.py  pipeline.py
src/agentic_rag/prompts/: context_generation_template.j2  conversational_prompt.j2  qa_generation_template.j2  reranker_template.j2  researcher_backstory.j2  scope_anchors.txt  system_prompt.j2  user_prompt.j2  writer_backstory.j2
src/agentic_rag/shared/: __init__.py  citations.py  config.py  constants.py  database.py  exceptions.py  llm_factory.py  logging.py  memory.py  models.py  observability.py  prompts.py  schemas.py
tests/: conftest.py  test_api_chat.py  test_citations.py  test_tools.py
